Replace to double ended queue